--- a/internal-beta-test-invitation.html
+++ b/internal-beta-test-invitation.html
@@ -16,48 +16,49 @@
 						<div style="padding-bottom: 30px; font-size: 17px; color:#009ef7;">
 							<strong>誠摯邀請參與 HiShops 平台內部封閉測試</strong>
 						</div>
-						<div style="padding-bottom: 30px">親愛的同事您好，<br>我們誠摯地邀請您參與 HiShops 平台的內部封閉測試，您的寶貴意見將幫助我們打造更優質的電商平台服務。</div>
+						<div style="padding-bottom: 30px">親愛的同事您好，<br>我們誠摯地邀請您參與 好嗨商 | HiShops 平台的內部封閉測試，您的寶貴意見將幫助我們打造更優質的電商平台服務。</div>
 						<div style="padding-bottom: 20px;">
 							<strong>測試背景：</strong><br>
-							為確保 HiShops 平台能提供最佳的用戶體驗，我們正在進行內部封閉測試，邀請集團內部各部門代表參與，以不同使用族群的角度來檢視平台功能。
+							為確保 好嗨商 | HiShops 平台能提供最佳的用戶體驗，我們正在進行內部封閉測試，邀請集團內部各部門代表參與，以不同使用族群的角度來檢視平台功能。
 						</div>
 						<div style="padding-bottom: 20px;">
 							<strong>測試詳情：</strong><br>
 							<ul style="margin: 10px 0 10px 20px; padding:0; color:#009ef7;">
 								<li><strong>測試時間：</strong>[測試日期與時段]</li>
-								<li><strong>測試地點：</strong>[測試地點或線上會議連結]</li>
-								<li><strong>預估時長：</strong>約 2-3 小時</li>
+								<li><strong>測試方式：</strong>[線上]</li>
+								<li><strong>預估時長：</strong>約 1 ～ 2 小時</li>
 								<li><strong>測試範圍：</strong>平台核心功能與用戶體驗</li>
 							</ul>
 						</div>
 						<div style="padding-bottom: 20px;">
 							<strong>測試流程：</strong><br>
-							1. 測試前說明與環境設定<br>
-							2. 功能測試與體驗回饋<br>
+							1. 點擊測試連結開啟測試說明文件<br>
+							2. 依照測試說明文件進行測試<br>
 							3. 填寫測試回報表單<br>
-							4. 意見交流與討論
+							4. 完成測試<br>
 						</div>
 						<div style="padding-bottom: 20px;">
 							<strong>參與價值：</strong><br>
 							• 為集團電商平台發展貢獻專業意見<br>
 							• 提前體驗新功能與服務<br>
-							• 協助提升平台品質與用戶滿意度<br>
-							• 促進跨部門合作與交流
+							• 協助提升平台品質與用戶滿意度
 						</div>
 						<div style="padding-bottom: 20px; color:#28a745;">
 							<strong>準備事項：</strong><br>
-							• 請攜帶筆記型電腦或平板設備<br>
-							• 測試帳號將於測試前提供<br>
-							• 測試手冊將於測試開始時發放
+							• 電腦、筆記型電腦或平板設備 (需可連網路)<br>
+							• 有安裝瀏覽器 (包含但不限於 Chrome, Edge, Firefox, Safari)<br>
+							• 可接收 Email (需可接收驗證信)<br>
+							• 可接收手機簡訊 (需可接收簡訊驗證碼)<br>
 						</div>
 						<div style="padding-bottom: 20px;">
-							如有任何疑問或需要調整測試時間，請聯絡測試負責人：<br>
-							Email：<a href="mailto:service@hishops.com.tw" style="color:#009ef7;text-decoration:none;">service@hishops.com.tw</a><br>
-							電話：02-0000-0000
+							如有任何疑問或需要調整測試時間，請聯絡<br>
+							測試負責人：Terry<br>
+							Email：<a href="mailto:services.hishops@gmail.com" style="color:#009ef7;text-decoration:none;">services.hishops@gmail.com</a><br>
+							電話：02-2558-0838 分機 26
 						</div>
-						<div style="padding-bottom: 30px; color:#7E8299;">感謝您的支持與參與，讓我們一起為 HiShops 平台的發展貢獻心力！</div>
+						<div style="padding-bottom: 30px; color:#7E8299;">感謝您的支持與參與，讓我們一起為 好嗨商 | HiShops 平台的發展貢獻心力！</div>
 						<!--end:Email content-->
-						<div style="padding-bottom: 10px">HiShops 開發團隊 敬上。
+						<div style="padding-bottom: 10px">好嗨商 | HiShops 開發團隊 敬上。
 						<tr>
 							<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
 								<p>台北市重慶北路一段26巷9弄1號3樓</p>
