--- a/refund-completed-notification.html
+++ b/refund-completed-notification.html
@@ -2,10 +2,17 @@
 <div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
 	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
 		<tbody>
+<!--			<tr th:if="${refundInfo.companyLogo}">-->
+<!--				<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">-->
+<!--					<a th:href="${refundInfo.companyWebsite}" rel="noopener" target="_blank">-->
+<!--						<img alt="Logo" width="60" height="70" th:src="${refundInfo.companyLogo}"/>-->
+<!--					</a>-->
+<!--				</td>-->
+<!--			</tr>-->
 			<tr>
-				<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
+				<td align="center" valign="center" style="text-align:center; padding: 40px">
 					<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-						<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png"/>
+						<img alt="Logo" width="60" height="70" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png" />
 					</a>
 				</td>
 			</tr>
@@ -16,7 +23,7 @@
 						<div style="padding-bottom: 30px; font-size: 17px; color:#28a745;">
 							<strong>退款完成通知</strong>
 						</div>
-						<div style="padding-bottom: 30px">親愛的買家您好，<br>賣家已確認完成您的退貨退款處理，請您檢查退款是否已到帳。</div>
+						<div style="padding-bottom: 30px">親愛的買家，您好<br>賣家已確認完成您的退貨退款處理，請您檢查退款是否已到帳。</div>
 						<div style="padding-bottom: 20px;">
 							<strong>退款資訊：</strong><br>
 							<ul style="margin: 10px 0 10px 20px; padding:0; color:#009ef7;">
