--- a/internal-beta-test-invitation.html
+++ b/internal-beta-test-invitation.html
@@ -1,74 +1,165 @@
-<style>html,body { padding: 0; margin:0; }</style>
-<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
-	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
-		<tbody>
-			<tr>
-				<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
-					<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-						<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png"/>
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td align="left" valign="center">
-					<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
-						<!--begin:Email content-->
-						<div style="padding-bottom: 30px; font-size: 17px; color:#009ef7;">
-							<strong>誠摯邀請參與 HiShops 平台內部封閉測試</strong>
-						</div>
-						<div style="padding-bottom: 30px">親愛的同事您好，<br>我們誠摯地邀請您參與 好嗨商 | HiShops 平台的內部封閉測試，您的寶貴意見將幫助我們打造更優質的電商平台服務。</div>
-						<div style="padding-bottom: 20px;">
-							<strong>測試背景：</strong><br>
-							為確保 好嗨商 | HiShops 平台能提供最佳的用戶體驗，我們正在進行內部封閉測試，邀請集團內部各部門代表參與，以不同使用族群的角度來檢視平台功能。
-						</div>
-						<div style="padding-bottom: 20px;">
-							<strong>測試詳情：</strong><br>
-							<ul style="margin: 10px 0 10px 20px; padding:0; color:#009ef7;">
-								<li><strong>測試時間：</strong>[測試日期與時段]</li>
-								<li><strong>測試方式：</strong>[線上]</li>
-								<li><strong>預估時長：</strong>約 1 ～ 2 小時</li>
-								<li><strong>測試範圍：</strong>平台核心功能與用戶體驗</li>
-							</ul>
-						</div>
-						<div style="padding-bottom: 20px;">
-							<strong>測試流程：</strong><br>
-							1. 點擊測試連結開啟測試說明文件<br>
-							2. 依照測試說明文件進行測試<br>
-							3. 填寫測試回報表單<br>
-							4. 完成測試<br>
-						</div>
-						<div style="padding-bottom: 20px;">
-							<strong>參與價值：</strong><br>
-							• 為集團電商平台發展貢獻專業意見<br>
-							• 提前體驗新功能與服務<br>
-							• 協助提升平台品質與用戶滿意度
-						</div>
-						<div style="padding-bottom: 20px; color:#28a745;">
-							<strong>準備事項：</strong><br>
-							• 電腦、筆記型電腦或平板設備 (需可連網路)<br>
-							• 有安裝瀏覽器 (包含但不限於 Chrome, Edge, Firefox, Safari)<br>
-							• 可接收 Email (需可接收驗證信)<br>
-							• 可接收手機簡訊 (需可接收簡訊驗證碼)<br>
-						</div>
-						<div style="padding-bottom: 20px;">
-							如有任何疑問或需要調整測試時間，請聯絡<br>
-							測試負責人：Terry<br>
-							Email：<a href="mailto:services.hishops@gmail.com" style="color:#009ef7;text-decoration:none;">services.hishops@gmail.com</a><br>
-							電話：02-2558-0838 分機 26
-						</div>
-						<div style="padding-bottom: 30px; color:#7E8299;">感謝您的支持與參與，讓我們一起為 好嗨商 | HiShops 平台的發展貢獻心力！</div>
-						<!--end:Email content-->
-						<div style="padding-bottom: 10px">好嗨商 | HiShops 開發團隊 敬上。
-						<tr>
-							<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
-								<p>台北市重慶北路一段26巷9弄1號3樓</p>
-								<p>Copyright &copy; 
-								<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
-							</td>
-						</tr></br></div>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
+<!DOCTYPE html>
+<html lang="zh-TW">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>誠摯邀請參與 HiShops 平台內部封閉測試</title>
+		<style>
+			html,body { padding: 0; margin:0; }
+			/* 改善連結樣式 */
+			a { color: #009ef7; text-decoration: none; }
+			a:hover { text-decoration: underline; }
+			/* 改善標題樣式 */
+			.title-primary { color: #1a1a1a; font-size: 20px; font-weight: 600; margin-bottom: 8px; }
+			.title-secondary { color: #2F3044; font-size: 17px; font-weight: 600; margin-bottom: 6px; }
+			.title-section { color: #2F3044; font-size: 16px; font-weight: 600; margin-bottom: 4px; }
+			/* 改善內容區塊樣式 */
+			.content-block { 
+				padding: 24px; 
+				margin: 24px 0; 
+				background-color: #f8f9fa; 
+				border-left: 4px solid #009ef7; 
+				border-radius: 6px;
+				box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+			}
+			/* 改善列表樣式 */
+			ul, ol { margin: 12px 0 0px 24px; padding: 0; }
+			li { margin-bottom: 6px; line-height: 1.6; }
+			/* 改善按鈕樣式 */
+			.btn-primary {
+				background-color: #009ef7;
+				border-radius: 8px;
+				display: inline-block;
+				padding: 14px 24px;
+				color: #FFFFFF;
+				font-size: 15px;
+				font-weight: 600;
+				text-decoration: none;
+				margin-top: 20px;
+				box-shadow: 0 2px 4px rgba(0, 123, 255, 0.2);
+				transition: all 0.2s ease;
+			}
+			.btn-primary:hover {
+				background-color: #0078d4;
+				box-shadow: 0 4px 8px rgba(0, 123, 255, 0.3);
+				text-decoration: none;
+			}
+			/* Logo 容器樣式 */
+			.logo-container {
+				display: inline-block;
+				width: 60px;
+				height: 70px;
+				position: relative;
+			}
+			.logo-container img {
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+				object-position: center;
+			}
+			/* 底部 Logo 容器樣式 */
+			.footer-logo-container {
+				display: inline-block;
+				width: 32px;
+				height: 32px;
+				position: relative;
+			}
+			.footer-logo-container img {
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+				object-position: center;
+			}
+		</style>
+	</head>
+	<body>
+		<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.6; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:20px; padding:0; width:calc(100% - 40px); background-color:#edf2f7; ">
+			<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:750px">
+				<tbody>
+					<tr>
+						<td align="center" valign="center" style="text-align:center; padding: 40px;">
+							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
+								<div class="logo-container">
+									<img alt="HiShops Logo" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png"/>
+								</div>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td align="left" valign="center">
+							<div style="text-align:left; margin: 20px; padding: 40px; background-color:#ffffff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+								<!--begin:Email content-->
+								<div class="title-primary">
+									誠摯邀請參與 HiShops 平台內部封閉測試
+								</div>
+								<div style="padding-bottom: 24px; line-height: 1.7;">
+									您好！我們誠摯地邀請您參與 <strong>好嗨商 | HiShops</strong> 平台的內部封閉測試，您的寶貴意見將幫助我們提升平台品質並打造更優質的電商平台服務。<br><br>
+									請詳閱以下說明，當您準備就緒，請點擊最下方的「開始測試」按鈕開始。<br><br>
+									<div style="background-color: #fff3cd; border: 1px solid #ffeaa7; border-radius: 6px; padding: 16px; margin: 16px 0;">
+										<strong style="color: #856404;">⚠️ 注意事項：</strong><br>
+										本次測試為內部封閉測試，僅限邀請參與。如果您繼續，代表您已經同意並且會遵守本次封測的 <a href="https://docs.google.com/document/d/1l8vwzmHaldvTX3PR4KLJ54nt5fajQTQLe-Djoymj02Y/edit?tab=t.0" target="_blank" rel="noopener">NDA保密協議</a>。
+									</div>
+								</div>
+								<div class="title-secondary">
+									關於本次測試
+								</div>
+								<div class="content-block">
+									<div class="title-section">📅 測試詳情</div>
+									<ul>
+										<li><strong>測試時間：</strong>9/1 ～ 9/5</li>
+										<li><strong>測試方式：</strong>線上測試</li>
+										<li><strong>預估時長：</strong>約 1 ～ 2 小時</li>
+										<li><strong>測試範圍：</strong>測試文件規範的測試項目</li>
+									</ul>
+								</div>
+								<div class="content-block">
+									<div class="title-section">✅ 準備事項</div>
+									<ul>
+										<li><strong>設備：</strong>電腦、筆記型電腦或平板設備 (需具備連網功能)</li>
+										<li><strong>軟體：</strong>包含但不限於 Chrome, Edge, Firefox, Safari 等瀏覽器</li>
+										<li><strong>信箱：</strong>可接收驗證信 & 填寫測試回報表單 (建議使用 Gmail 信箱)</li>
+										<li><strong>手機：</strong>可接收簡訊驗證碼</li>
+									</ul>
+								</div>
+								<div class="content-block">
+									<div class="title-section">🔄 測試流程</div>
+									<ol>
+										<li>當您準備好了，請點擊 <strong>「開始測試」</strong> 按鈕開啟<strong>「封測任務清單」</strong>。</li>
+										<li>依照<strong>「封測任務清單」</strong>的指示進行測試。</li>
+										<li>每個項目測試完成後，請撥空填寫<strong>「好嗨商 | HiShops 封測問卷」</strong>。</li>
+										<li>完成全部任務，並填寫問卷，即是完成本次的封閉測試。</li>
+									</ol>
+									<a href="https://docs.google.com/document/d/1uvpmLX_0cT2ibpa8tirgH2iFBrCfWOuUdGN1lYRLRmk/edit?usp=sharing" target="_blank" class="btn-primary">開始測試</a>
+								</div>
+								<div style="padding: 24px 0; border-top: 1px solid #e9ecef; margin-top: 24px;">
+									<div style="font-weight: 600; margin-bottom: 12px; color: #2F3044;">如有任何疑問或需要協助，請聯絡</div>
+									<div style="line-height: 1.8;">
+										<strong>負責窗口：</strong>Wilbur (經理), Terry (PM)<br>
+										<strong>好嗨商 LINE 客服：</strong><a href="https://lin.ee/pToIHlY" target="_blank" rel="noopener">@129bkopv</a><br>
+										<strong>Email：</strong><a href="mailto:services.hishops@gmail.com">services.hishops@gmail.com</a><br>
+										<strong>電話：</strong><a href="tel:0225580838">02-2558-0838</a>
+									</div>
+								</div>
+								<!--end:Email content-->
+								<div style="padding: 24px 0 0 0; border-top: 1px solid #e9ecef; margin-top: 24px; font-style: italic; color: #6c757d;">
+									感謝您的支持與參與，讓我們一起為 <strong>好嗨商 | HiShops</strong> 平台的發展貢獻心力！<br>奇威雲端科技 開發團隊 敬上
+								</div>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
+							<a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank">
+								<div class="footer-logo-container">
+									<img alt="Logo" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png" /> 
+								</div>
+								<br>好嗨商 | HiShops
+							</a>
+							<p>&copy; 2025 <a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank">奇威雲端科技 | KeywayCloud Inc.</a> 版權所有</p>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</body>
+</html>
