退款回覆信件
新增退款備註

--- a/refund-completed-notification.html
+++ b/refund-completed-notification.html
@@ -31,6 +31,7 @@
 								<li>退款金額：<span th:text="${refundInfo.refundAmount}">[退款金額]</span></li>
 								<li>退款時間：<span th:text="${refundInfo.refundTime}">[退款時間]</span></li>
 								<li>退款方式：<span th:text="${refundInfo.refundMethod}">[退款方式，如銀行轉帳、信用卡退款等]</span></li>
+								<li>退款備註：<span th:text="${refundInfo.refundNote}">[退款備註]</span></li>
 							</ul>
 						</div>
 						<!-- <div style="padding-bottom: 20px; color:#6c757d;">
