--- a/ec-welcome-message.html
+++ b/ec-welcome-message.html
@@ -16,7 +16,7 @@
 <tr>
 						<td align="center" valign="center" style="text-align:center; padding: 40px">
 							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-								<img alt="Logo" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png" style="height: 35px"/>
+								<img alt="Logo" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png" style="height: 35px"/>
 							</a>
 						</td>
 					</tr>
@@ -45,13 +45,13 @@
 													<!--begin:Logo-->
 													<div style="margin-bottom: 30px">
 														<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-															<img alt="Logo" src="https://www.hishops.com.tw/img/hishops-logo-email.png" style="height: 32px" />
+															<img alt="Logo" src="https://s3.keywaycloud.com.tw/common/email-assets/hishops-logo-email.png" style="height: 32px" />
 														</a>
 													</div>
 													<!--end:Logo-->
 													<!--begin:Media-->
 													<div style="margin-bottom: 15px">
-														<img alt="Logo" src="https://www.hishops.com.tw/img/icon-positive-vote-1.svg" />
+														<img alt="Logo" src="https://s3.keywaycloud.com.tw/common/email-assets/icon-positive-vote-1.png" />
 													</div>
 													<!--end:Media-->
 													<!--begin:Text-->
