--- a/password-changed.html
+++ b/password-changed.html
@@ -15,7 +15,7 @@
 					<tr>
 						<td align="center" valign="center" style="text-align:center; padding: 40px">
 							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-								<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png" />
+								<img alt="Logo" width="60" height="70" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png" />
 							</a>
 						</td>
 					</tr>
