--- a/ec-signup-verify-email.html
+++ b/ec-signup-verify-email.html
@@ -1,62 +1,57 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>帳號驗證</title>
-		<style>
-			html,body { padding: 0; margin:0; }
-		</style>
-	</head>
-	<body>
-		<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
-			<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
-				<tbody>
-					<tr>
-						<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
-							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-								<img alt="Logo" width="60" height="70" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png"/>
-							</a>
-						</td>
-					</tr>
-					<tr>
-						<td align="center" valign="center">
-							<div style="text-align:left margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
-								<!--begin:Email content-->
-								<div style="padding-bottom: 30px; font-size: 17px;">
-									<strong>歡迎您註冊 EC Store Name</strong>
-								</div>
-								<div style="padding-bottom: 30px">請點擊下方連結完成您的帳號註冊：</br>(此驗證連結將於 24 小時內失效)</div>
-								<div style="padding-bottom: 40px; text-align:center;">
-									<a href="https://www.hishops.com.tw/" rel="noopener" style="text-decoration:none;display:inline-block;text-align:center;padding:0.75575rem 1.3rem;font-size:0.925rem;line-height:1.5;border-radius:0.35rem;color:#ffffff;background-color:#009ef7;border:0px;margin-right:0.75rem!important;font-weight:600!important;outline:none!important;vertical-align:middle" target="_blank">驗證我的信箱</a>
-								</div>
-								<div style="border-bottom: 1px solid #eeeeee; margin: 15px 0"></div>
-								<div style="padding-bottom: 50px; word-wrap: break-all;">
-									<strong>重要提醒：🚀 一個帳號，暢行多個電商</strong>
-									<p style="margin-bottom: 10px;">您註冊的帳號可用於所有參加好嗨商聯盟電商平台的商店</br>無需重複註冊，輕鬆購物！</br>確認成功後，您將收到詳細的歡迎信與新會員專屬優惠。</p>
-								</div>
-								<!-- 
-									<div style="padding-bottom: 50px; word-wrap: break-all;">
-									<p style="margin-bottom: 10px;">按鈕無法點擊? 請將以下網址貼到您的瀏覽器中：</p>
-									<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank" style="text-decoration:none;color: #009ef7">account verification link</a>
-								</div>
- -->
-								<!--end:Email content-->
-								<div style="padding-bottom: 10px">好嗨商團隊 敬上。
-								
-								<tr>
-									<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
-										<p>提醒您: 此為系統主動發送信函，請勿直接回覆此郵件。</p>
-										<p>台北市重慶北路一段26巷9弄1號3樓</p>
-										<p>Copyright &copy; 
-										<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
-									</td>
-								</tr></br></div>
-							</div>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>帳號驗證</title>
+	<style>
+		html,body { padding: 0; margin:0; }
+	</style>
+</head>
+<body>
+<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
+	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
+		<tbody>
+		<tr>
+			<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
+				<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
+					<img alt="Logo" width="60" height="70" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png"/>
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<td align="center" valign="center">
+				<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
+					<!--begin:Email content-->
+					<div style="padding-bottom: 30px; font-size: 17px;">
+						<strong>歡迎您註冊 EC Store Name</strong>
+					</div>
+					<div style="padding-bottom: 30px">請點擊下方連結完成您的帳號註冊：</br>(此驗證連結將於 24 小時內失效)</div>
+					<div style="padding-bottom: 40px; text-align:center;">
+						<a th:href="${verificationUrl}" rel="noopener" style="text-decoration:none;display:inline-block;text-align:center;padding:0.75575rem 1.3rem;font-size:0.925rem;line-height:1.5;border-radius:0.35rem;color:#ffffff;background-color:#009ef7;border:0px;margin-right:0.75rem!important;font-weight:600!important;outline:none!important;vertical-align:middle" target="_blank">驗證我的信箱</a>
+					</div>
+					<div style="border-bottom: 1px solid #eeeeee; margin: 15px 0"></div>
+					<div style="padding-bottom: 50px; word-break: break-all; overflow-wrap: break-word;">
+						<strong>重要提醒：🚀 一個帳號，暢行多個電商</strong>
+						<p style="margin-bottom: 10px;">您註冊的帳號可用於所有參加好嗨商聯盟電商平台的商店</br>無需重複註冊，輕鬆購物！</br>確認成功後，您將收到詳細的歡迎信與新會員專屬優惠。</p>
+					</div>
+					-->
+					<!--end:Email content-->
+					<div style="padding-bottom: 10px">好嗨商團隊 敬上。
+
+						<tr>
+							<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
+								<p>提醒您: 此為系統主動發送信函，請勿直接回覆此郵件。</p>
+								<p>台北市重慶北路一段26巷9弄1號3樓</p>
+								<p>Copyright &copy;
+									<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
+							</td>
+						</tr></br></div>
+				</div>
+			</td>
+		</tr>
+		</tbody>
+	</table>
+</div>
+</body>
 </html>
