--- a/ec-welcome-message.html
+++ b/ec-welcome-message.html
@@ -12,7 +12,7 @@
 		<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
 			<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
 				<tbody>
-					<!-- 
+					<!--
 <tr>
 						<td align="center" valign="center" style="text-align:center; padding: 40px">
 							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
@@ -58,12 +58,12 @@
 													<div style="font-size: 14px; font-weight: 500; margin-bottom: 27px; font-family:Arial,Helvetica,sans-serif;">
 														<p style="margin-bottom:9px; color:#181C32; font-size: 22px; font-weight:700">歡迎加入好嗨!商電商聯盟平台！🎉</p>
 														<p style="margin-bottom:2px; color:#7E8299">我們很高興您加入了這個結合眾多優質電商的大家庭。</p>
-														<p style="margin-bottom:2px; color:#7E8299">您的註冊帳號 [customer.email@example.com] 已經成功啟用，現在您可以使用這個帳號登入平台上的所有商店，盡情探索各種獨特商品，享受便利的一站式購物體驗！</p>
+														<p style="margin-bottom:2px; color:#7E8299">您的註冊帳號[ <span th:text="${data.email}"> </span> ]已經成功啟用，現在您可以使用這個帳號登入平台上的所有商店，盡情探索各種獨特商品，享受便利的一站式購物體驗！</p>
 														<!-- <p style="margin-bottom:2px; color:#7E8299">content</p> -->
 													</div>
 													<!--end:Text-->
 													<!--begin:Action-->
-													<a target="_blank" style="background-color:#50cd89; border-radius:6px;display:inline-block; padding:11px 19px; color: #FFFFFF; font-size: 14px; font-weight:500;">登入 好嗨商</a>
+													<a th:href="${data.login}" target="_blank" style="background-color:#50cd89; border-radius:6px;display:inline-block; padding:11px 19px; color: #FFFFFF; font-size: 14px; font-weight:500;">登入 好嗨商</a>
 													<!--begin:Action-->
 												</div>
 												<!--end:Email content-->
@@ -87,7 +87,7 @@
 															<!--begin::Content-->
 															<div>
 																<!--begin::Title-->
-																<a href="/volume1/web/hishops/img/icon-polygon.svg" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">瀏覽聯盟店家</a>
+																<a th:href="${data.browseStores}" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">瀏覽聯盟店家</a>
 																<!--end::Title-->
 																<!--begin::Desc-->
 																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">探索各類優質商店，從時尚服飾到美食、科技產品應有盡有</p>
@@ -154,7 +154,7 @@
 													<!--end::Item-->
 												</div>
 												<!--end::Wrapper-->
-												
+
 												<p style="color:#181C32; font-size: 18px; font-weight: 600; margin-bottom:13px">新會員專屬優惠</p>
 												<!--begin::Wrapper-->
 												<div style="background: #F9F9F9; border-radius: 12px; padding:35px 30px">
@@ -171,7 +171,7 @@
 															<!--begin::Content-->
 															<div>
 																<!--begin::Title-->
-																<a href="/volume1/web/hishops/img/icon-polygon.svg" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">首購享9折</a>
+																<a th:href="${data.firstShopping}" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">首購享9折</a>
 																<!--end::Title-->
 																<!--begin::Desc-->
 																<p style="color:#5E6278; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">使用優惠碼：WELCOME2025</p>
@@ -243,7 +243,7 @@
 											<td align="center" valign="center" style="font-size: 13px; text-align:center; padding: 0 10px 10px 10px; font-weight: 500; color: #A1A5B7; font-family:Arial,Helvetica,sans-serif">
 												<p style="color:#181C32; font-size: 16px; font-weight: 600; margin-bottom:9px">聯繫我們：</p>
 												<p>如有任何問題或需要協助，歡迎與我們聯繫：</p>
-												<p style="margin-bottom:4px">客服信箱: 
+												<p style="margin-bottom:4px">客服信箱:
 												<a href="#" rel="noopener" target="_blank" style="font-weight: 600">service@hishops.com.tw</a></p>
 												<p>☎️ 客服專線：02-2525-xxxx（週一至週五 9:00-18:00）</p>
 											</td>
@@ -252,7 +252,7 @@
 												<p>再次感謝您加入好嗨商電商聯盟平台，讓我們一起探索更便利、更精彩的購物新體驗！</p>
 											</td>
 										<tr>
-											<!-- 
+											<!--
 												<td align="center" valign="center" style="text-align:center; padding-top: 20px;">
 												<a href="#" style="margin-right:10px">
 													<img alt="Logo" src="assets/media/email/icon-linkedin.svg" />
@@ -284,7 +284,7 @@
 									<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
 										<p>提醒您: 此為系統主動發送信函，請勿直接回覆此郵件。</p>
 										<p>台北市重慶北路一段26巷9弄1號3樓</p>
-										<p>Copyright &copy; 
+										<p>Copyright &copy;
 										<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a>.</p>
 									</td>
 								</tr>
