套用 email 模板樣式規範至買家郵件模板（5個檔案）

--- a/mall_customer/ec-password-changed.html
+++ b/mall_customer/ec-password-changed.html
@@ -27,12 +27,6 @@
 				</table>
 			</td>
 		</tr>
-		<!-- 無 Logo 時僅顯示名稱 -->
-		<tr th:if="${storeInfo.storeLogo == null or storeInfo.storeLogo == ''}">
-			<td align="left" valign="center" style="padding: 40px 20px 20px 60px;">
-				<span style="font-size: 20px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${storeInfo.teamName}">[storeName]</span>
-			</td>
-		</tr>
 		<tr>
 			<td align="left" valign="center">
 				<div style="text-align:left; margin: 0 20px 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
@@ -41,10 +35,10 @@
 						<strong>密碼變更通知</strong>
 					</div>
 					<div style="padding-bottom: 30px">親愛的顧客您好，<br>您的帳號密碼已成功變更。</div>
-					<div style="padding-bottom: 20px;">
+					<!-- <div style="padding-bottom: 20px;">
 						<strong>變更時間：</strong> <span th:text="${resetPwdInfo.resetTime}">[變更時間]</span><br>
 						<strong>IP 位址：</strong> <span th:text="${resetPwdInfo.clientIp}">[IP 位址]</span>
-					</div>
+					</div> -->
 					<div style="padding-bottom: 30px; color: #2F3044;">如果這不是您本人的操作，請立即聯絡我們的客服團隊，我們會立即協助您處理。</div>
 					<!-- 聯絡資訊區塊 -->
 					<div style="padding-top: 30px; margin-top: 30px;">
