調整敘述，移除直指後台說明文件的方式。

--- a/mall_seller/welcome-message.html
+++ b/mall_seller/welcome-message.html
@@ -32,54 +32,14 @@
 														</div>
 													</td>
 												</tr>
-												<tr style="display: flex; justify-content: center; margin:0 30px 35px 30px">
-													<td align="start" valign="start" style="padding-bottom: 10px;">
-														<p style="color:#181C32; font-size: 18px; font-weight: 600; margin-bottom:13px">開始您的電商設定：</p>
-														<div style="background: #F9F9F9; border-radius: 12px; padding:35px 30px">
-															<div style="display:flex">
-																<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px; position: relative;">
-																	<div style="width: 40px; height: 40px; background-color: #152022; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-																		<span style="color:#e7ff25; font-size: 16px; font-weight: 600;">1</span>
-																	</div>
-																</div>
-																<div>
-																	<div>
-																		<a href="https://admin.hishops.tw/help/tutorials/2" target="_blank" rel="noopener" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">建立您的第一個商品</a>
-																		<p style="color:#7E8299; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">📍 使用AI生成商品超簡單！圖生文快速生成商品資訊，讓您的店鋪快速運營起來。</p>
-																	</div>
-																	<div style="margin:17px 0 15px 0"></div>
-																</div>
-															</div>
-															<div style="display:flex">
-																<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px; position: relative;">
-																	<div style="width: 40px; height: 40px; background-color: #152022; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-																		<span style="color:#e7ff25; font-size: 16px; font-weight: 600;">2</span>
-																	</div>
-																</div>
-																<div>
-																	<div>
-																		<a href="https://admin.hishops.com.tw/help/tutorials/32" target="_blank" rel="noopener" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">設定您的商店資訊</a>
-																		<p style="color:#7E8299; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">📍 品牌名稱、LOGO、商店描述。打造專屬您的線上商店，提高品牌形象與信任感。</p>
-																	</div>
-																	<div style="margin:17px 0 15px 0"></div>
-																</div>
-															</div>
-															<div style="display:flex">
-																<div style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px; position: relative;">
-																	<div style="width: 40px; height: 40px; background-color: #152022; border-radius: 50%; display: flex; align-items: center; justify-content: center;">
-																		<span style="color:#e7ff25; font-size: 16px; font-weight: 600;">3</span>
-																	</div>
-																</div>
-																<div>
-																	<div>
-																		<a href="https://admin.hishops.com.tw/help/tutorials/4" target="_blank" rel="noopener" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif">開啟付款與物流設定</a>
-																		<p style="color:#7E8299; font-size: 13px; font-weight: 500; padding-top:3px; margin:0;font-family:Arial,Helvetica,sans-serif">📍 設定付款方式與物流配送，讓顧客無縫下單，提升銷售轉換率！</p>
-																	</div>
-																</div>
-															</div>
-														</div>
-													</td>
-												</tr>
+											<tr>
+												<td align="center" valign="center" style="text-align:center; padding: 0 16px 24px 16px; font-family:Arial,Helvetica,sans-serif;">
+													<div style="background: #F9F9F9; border-radius: 12px; padding:35px 30px; margin:0 16px 24px 16px;">
+														<p style="color:#181C32; font-size: 16px; font-weight: 600; margin-bottom:12px; text-align:center;">開始您的電商設定</p>
+														<p style="color:#7E8299; font-size: 14px; font-weight: 500; line-height: 1.6; margin:0; text-align:center;">登入後台後，請跟著首次使用的說明導覽，一步一步完成商店設定，包括建立商品、設定商店資訊、開啟付款與物流等功能，讓您輕鬆開啟電商之旅！</p>
+													</div>
+												</td>
+											</tr>
 											<tr>
 												<td align="center" valign="center" style="padding: 12px 10px; font-family:Arial,Helvetica,sans-serif;">
 													<p style="color:#181C32; font-size: 15px; font-weight: 600; margin-bottom:10px; text-align:center;">關於好嗨商的任何問題，歡迎隨時聯繫我們的客服團隊：</p>
