HS-990 服務 - email 格式
修正與同步mail新模板

--- a/mall_customer/ec-password-reset.html
+++ b/mall_customer/ec-password-reset.html
@@ -13,15 +13,15 @@
 	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
 		<tbody>
 		<!-- 賣家 Logo 和名稱（可選，如果有提供） -->
-		<tr th:if="${storeInfo.storeLogo != null and storeInfo.storeLogo != ''}">
+		<tr th:if="${forgotPwdInfo.storeLogo != null and forgotPwdInfo.storeLogo != ''}">
 			<td align="left" valign="center" style="padding: 40px 20px 20px 60px;">
 				<table border="0" cellpadding="0" cellspacing="0" style="border-collapse:collapse;">
 					<tr>
 						<td align="left" valign="middle" style="padding-right: 20px;">
-							<img alt="Logo" th:src="${storeInfo.storeLogo}" style="max-width: 60px; max-height: 60px; display: block;" />
+							<img alt="Logo" th:src="${forgotPwdInfo.storeLogo}" style="max-width: 60px; max-height: 60px; display: block;" />
 						</td>
 						<td align="left" valign="middle">
-							<span style="font-size: 20px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${storeInfo.teamName}">[storeName]</span>
+							<span style="font-size: 20px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${forgotPwdInfo.storeName}">[storeName]</span>
 						</td>
 					</tr>
 				</table>
@@ -36,7 +36,7 @@
 					</div>
 					<div style="padding-bottom: 30px; color: #2F3044;">我們收到您的密碼重置請求，請點擊下面的按鈕繼續：<br>(此密碼重置連結將在 60 分鐘後失效)</div>
 					<div style="padding-bottom: 40px; text-align:left;">
-						<a th:href="${verificationUrl}" rel="noopener" style="background-color:#009ef7; color:#ffffff; font-size: 14px; font-weight: 600; border-radius: 6px; padding: 11px 19px; display: inline-block; text-decoration: none;" target="_blank">重置密碼</a>
+						<a th:href="${forgotPwdInfo.verificationUrl}" rel="noopener" style="background-color:#009ef7; color:#ffffff; font-size: 14px; font-weight: 600; border-radius: 6px; padding: 11px 19px; display: inline-block; text-decoration: none;" target="_blank">重置密碼</a>
 					</div>
 					<div style="padding-bottom: 30px; color: #2F3044;">若您最近沒有提出密碼重置請求，且認為可能有人存取了您的帳號，請立即聯絡我們的客服團隊，我們會立即協助您處理。</div>
 					<!-- 聯絡資訊區塊 -->
@@ -47,16 +47,16 @@
 						<div style="border-top: 1px solid #e9ecef; padding-top: 10px; margin-top: 10px;">
 							<table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;">
 								<tbody>
-									<tr th:if="${storeInfo.serviceEmail != null and storeInfo.serviceEmail != ''}">
+									<tr th:if="${forgotPwdInfo.serviceEmail != null and forgotPwdInfo.serviceEmail != ''}">
 										<td style="padding: 0 0 0 0; text-align:left;">
 											<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">客服信箱：</span>
-											<a th:href="'mailto:' + ${storeInfo.serviceEmail}" style="color:#009ef7; text-decoration:none; font-size: 14px; font-weight: 600;" th:text="${storeInfo.serviceEmail}">[serviceEmail]</a>
+											<a th:href="'mailto:' + ${forgotPwdInfo.serviceEmail}" style="color:#009ef7; text-decoration:none; font-size: 14px; font-weight: 600;" th:text="${forgotPwdInfo.serviceEmail}">[serviceEmail]</a>
 										</td>
 									</tr>
-									<tr th:if="${storeInfo.servicePhone != null and storeInfo.servicePhone != ''}">
+									<tr th:if="${forgotPwdInfo.servicePhone != null and forgotPwdInfo.servicePhone != ''}">
 										<td style="padding: 0 0 0 0; text-align:left;">
 											<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">聯絡電話：</span>
-											<a th:href="'tel:' + ${storeInfo.servicePhone}" style="color:#2F3044; text-decoration:none; font-size: 14px; font-weight: 500;" th:text="${storeInfo.servicePhone}">[servicePhone]</a>
+											<a th:href="'tel:' + ${forgotPwdInfo.servicePhone}" style="color:#2F3044; text-decoration:none; font-size: 14px; font-weight: 500;" th:text="${forgotPwdInfo.servicePhone}">[servicePhone]</a>
 										</td>
 									</tr>
 								</tbody>
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 					<!-- 簽名區塊 -->
-					<div style="padding-top: 30px; padding-bottom: 10px; color: #2F3044;"><span th:text="${storeInfo.teamName}">[storeName]</span> 敬上。</div>
+					<div style="padding-top: 30px; padding-bottom: 10px; color: #2F3044;"><span th:text="${forgotPwdInfo.storeName}">[storeName]</span> 敬上。</div>
 					<!--end:Email content-->
 				</div>
 			</td>
