--- a/mall_seller/account/password-changed.html
+++ b/mall_seller/account/password-changed.html
@@ -75,7 +75,7 @@
 				</tr>
 				<tr>
 					<td align="center" valign="center" style="font-size: 13px; text-align:center; padding: 20px; color: #6d6e7c;">
-						<p>好嗨商 | HiShops &copy; <span th:text="${#temporals.year(#temporals.now())}"></span> 是由 <a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank" style="color: #6d6e7c; text-decoration: none;">奇威雲端科技</a> 為您精心打造的電商平台。</p>
+						<p>好嗨商 | HiShops &copy; <span th:text="${currentYear}"></span> 是由 <a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank" style="color: #6d6e7c; text-decoration: none;">奇威雲端科技</a> 為您精心打造的電商平台。</p>
 					</td>
 				</tr>
 			</tbody>
