--- a/mall_seller/account/password-reset.html
+++ b/mall_seller/account/password-reset.html
@@ -35,16 +35,11 @@
 							<div style="padding-bottom: 30px; font-size: 18px; color: #181C32; font-weight: 600;">
 								<strong>您好!</strong>
 							</div>
-							<div style="padding-bottom: 30px; color: #2F3044;">我們收到您的重置密碼的請求，請點擊下面的按鈕繼續：<br>(此密碼重置連結將在 60 分鐘後失效)</div>
+							<div style="padding-bottom: 30px; color: #2F3044;">我們收到您的重置密碼的請求，請點擊下面的按鈕繼續：<br>(此密碼重置連結將在 24 小時後失效)</div>
 							<div style="padding-bottom: 40px; text-align:left;">
-								<a th:href="${verificationUrl}" rel="noopener" target="_blank" style="background-color:#009ef7; color:#ffffff; font-size: 14px; font-weight: 600; border-radius: 6px; padding: 11px 19px; display: inline-block; text-decoration: none;">重置密碼</a>
+								<a th:href="${pwdChangeInfo.verificationUrl}" rel="noopener" target="_blank" style="background-color:#009ef7; color:#ffffff; font-size: 14px; font-weight: 600; border-radius: 6px; padding: 11px 19px; display: inline-block; text-decoration: none;">重置密碼</a>
 							</div>
 							<div style="padding-bottom: 30px; color: #2F3044;">若您最近沒有提出密碼重置請求，且認為可能有人存取了您的帳號，請盡快前往「好嗨商」(https://www.hishops.com.tw/) 管理您的密碼。</div>
-							<!-- <div style="border-top: 1px solid #e9ecef; margin: 15px 0"></div>
-							<div style="padding-bottom: 50px; word-break: break-all; overflow-wrap: break-word; color: #2F3044;">
-								<p style="margin-bottom: 10px;">按鈕無法使用？請嘗試將以下網址複製到您的瀏覽器中：</p>
-								<a th:href="${verificationUrl}" rel="noopener" target="_blank" style="text-decoration:none; color: #009ef7; font-size: 14px; font-weight: 600;">重置密碼的URL連結</a>
-							</div> -->
 							<!-- 聯絡資訊區塊 -->
 							<div style="padding-top: 30px; margin-top: 30px;">
 								<p style="color:#181C32; font-size: 15px; font-weight: 600; margin-bottom:10px; text-align:left;">
@@ -83,7 +78,7 @@
 				</tr>
 				<tr>
 					<td align="center" valign="center" style="font-size: 13px; text-align:center; padding: 20px; color: #6d6e7c;">
-						<p>好嗨商 | HiShops &copy; <span th:text="${#temporals.year(#temporals.now())}"></span> 是由 <a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank" style="color: #6d6e7c; text-decoration: none;">奇威雲端科技</a> 為您精心打造的電商平台。</p>
+						<p>好嗨商 | HiShops &copy; <span th:text="${pwdChangeInfo.currentYear}"></span> 是由 <a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank" style="color: #6d6e7c; text-decoration: none;">奇威雲端科技</a> 為您精心打造的電商平台。</p>
 					</td>
 				</tr>
 			</tbody>
