--- a/mall_customer/ec-password-changed.html
+++ b/mall_customer/ec-password-changed.html
@@ -13,15 +13,15 @@
 	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
 		<tbody>
 		<!-- 賣家 Logo 和名稱（可選，如果有提供） -->
-		<tr th:if="${storeInfo.storeLogo != null and storeInfo.storeLogo != ''}">
+		<tr th:if="${resetPwdInfo.storeLogo != null and resetPwdInfo.storeLogo != ''}">
 			<td align="left" valign="center" style="padding: 40px 20px 20px 60px;">
 				<table border="0" cellpadding="0" cellspacing="0" style="border-collapse:collapse;">
 					<tr>
 						<td align="left" valign="middle" style="padding-right: 20px;">
-							<img alt="Logo" th:src="${storeInfo.storeLogo}" style="max-width: 60px; max-height: 60px; display: block;" />
+							<img alt="Logo" th:src="${resetPwdInfo.storeLogo}" style="max-width: 60px; max-height: 60px; display: block;" />
 						</td>
 						<td align="left" valign="middle">
-							<span style="font-size: 20px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${storeInfo.teamName}">[storeName]</span>
+							<span style="font-size: 20px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${resetPwdInfo.storeName}">[storeName]</span>
 						</td>
 					</tr>
 				</table>
@@ -35,10 +35,6 @@
 						<strong>密碼變更通知</strong>
 					</div>
 					<div style="padding-bottom: 30px">親愛的顧客您好，<br>您的帳號密碼已成功變更。</div>
-					<!-- <div style="padding-bottom: 20px;">
-						<strong>變更時間：</strong> <span th:text="${resetPwdInfo.resetTime}">[變更時間]</span><br>
-						<strong>IP 位址：</strong> <span th:text="${resetPwdInfo.clientIp}">[IP 位址]</span>
-					</div> -->
 					<div style="padding-bottom: 30px; color: #2F3044;">如果這不是您本人的操作，請立即聯絡我們的客服團隊，我們會立即協助您處理。</div>
 					<!-- 聯絡資訊區塊 -->
 					<div style="padding-top: 30px; margin-top: 30px;">
@@ -48,16 +44,16 @@
 						<div style="border-top: 1px solid #e9ecef; padding-top: 10px; margin-top: 10px;">
 							<table border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;">
 								<tbody>
-									<tr th:if="${storeInfo.serviceEmail != null and storeInfo.serviceEmail != ''}">
+									<tr th:if="${resetPwdInfo.serviceEmail != null and resetPwdInfo.serviceEmail != ''}">
 										<td style="padding: 0 0 0 0; text-align:left;">
 											<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">客服信箱：</span>
-											<a th:href="'mailto:' + ${storeInfo.serviceEmail}" style="color:#009ef7; text-decoration:none; font-size: 14px; font-weight: 600;" th:text="${storeInfo.serviceEmail}">[serviceEmail]</a>
+											<a th:href="'mailto:' + ${resetPwdInfo.serviceEmail}" style="color:#009ef7; text-decoration:none; font-size: 14px; font-weight: 600;" th:text="${resetPwdInfo.serviceEmail}">[serviceEmail]</a>
 										</td>
 									</tr>
-									<tr th:if="${storeInfo.servicePhone != null and storeInfo.servicePhone != ''}">
+									<tr th:if="${resetPwdInfo.servicePhone != null and resetPwdInfo.servicePhone != ''}">
 										<td style="padding: 0 0 0 0; text-align:left;">
 											<span style="color:#7E8299; font-size: 13px; display:inline-block; width: 80px;">聯絡電話：</span>
-											<a th:href="'tel:' + ${storeInfo.servicePhone}" style="color:#2F3044; text-decoration:none; font-size: 14px; font-weight: 500;" th:text="${storeInfo.servicePhone}">[servicePhone]</a>
+											<a th:href="'tel:' + ${resetPwdInfo.servicePhone}" style="color:#2F3044; text-decoration:none; font-size: 14px; font-weight: 500;" th:text="${resetPwdInfo.servicePhone}">[servicePhone]</a>
 										</td>
 									</tr>
 								</tbody>
@@ -65,7 +61,7 @@
 						</div>
 					</div>
 					<!-- 簽名區塊 -->
-					<div style="padding-top: 30px; padding-bottom: 10px; color: #2F3044;"><span th:text="${storeInfo.teamName}">[storeName]</span> 敬上。</div>
+					<div style="padding-top: 30px; padding-bottom: 10px; color: #2F3044;"><span th:text="${resetPwdInfo.storeName}">[storeName]</span> 敬上。</div>
 					<!--end:Email content-->
 				</div>
 			</td>
