--- a/mall_customer/ec-refund-completed-notification.html
+++ b/mall_customer/ec-refund-completed-notification.html
@@ -21,7 +21,7 @@
 										<img alt="Logo" th:src="${refundInfo.storeLogo}" style="max-width: 60px; max-height: 60px; display: block;" />
 									</td>
 									<td align="left" valign="middle">
-										<span style="font-size: 20px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${refundInfo.teamName}">[storeName]</span>
+										<span style="font-size: 20px; font-weight: 700; color: #181C32; font-family:Arial,Helvetica,sans-serif;" th:text="${refundInfo.storeName}">[storeName]</span>
 									</td>
 								</tr>
 							</table>
@@ -31,7 +31,7 @@
 						<td align="left" valign="center">
 							<div style="text-align:left; margin: 0 20px 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px;">
 								<!--begin:Email content-->
-								<div style="padding-bottom: 30px">親愛的買家您好<br>您於 <span th:text="${refundInfo.teamName}">[storeName]</span> 申請的退款結果資訊如下：</div>
+								<div style="padding-bottom: 30px">親愛的買家您好<br>您於 <span th:text="${refundInfo.storeName}">[storeName]</span> 申請的退款結果資訊如下：</div>
 								<div style="padding-bottom: 20px;">
 									<strong>退款資訊：</strong><br>
 									<ul style="margin: 10px 0 10px 20px; padding:0; color:#009ef7;">
@@ -42,7 +42,6 @@
                                         <li>退款備註：<span th:text="${refundInfo.refundNote}">[退款備註]</span></li>
                                     </ul>
 								</div>
-								<div style="padding-bottom: 30px; color: #2F3044;">如有任何疑問，歡迎隨時聯繫我們。</div>
 								<!-- 聯絡資訊區塊 -->
 								<div style="padding-top: 30px; margin-top: 30px;">
 									<p style="color:#181C32; font-size: 15px; font-weight: 600; margin-bottom:10px; text-align:left;">
@@ -70,8 +69,18 @@
 								<div style="padding-bottom: 30px; color:#7E8299;">感謝您的支持，祝您購物愉快！</div>
 								<!--end:Email content-->
 								<!-- 簽名區塊 -->
-								<div style="padding-top: 30px; padding-bottom: 10px; color: #2F3044;"><span th:text="${refundInfo.teamName}">[storeName]</span> 敬上。</div>
+								<div style="padding-top: 30px; padding-bottom: 10px; color: #2F3044;"><span th:text="${refundInfo.storeName}">[storeName]</span> 敬上。
+									<tr>
+										<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
+											<p th:text="${refundInfo.companyAddress}">[companyAddress]</p>
+											<p>Copyright &copy;
+												<a th:href="${refundInfo.companyWebsite}" rel="noopener" target="_blank" th:text="${refundInfo.storeName}">[storeName]</a></p>
+										</td>
+									</tr>
+									</br>
+								</div>
 								<!--end:Email content-->
+
 							</div>
 						</td>
 					</tr>
