--- a/mall_customer/ec-welcome-message.html
+++ b/mall_customer/ec-welcome-message.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>歡迎加入 <span th:text="${storeInfo.teamName}">[storeName]</span></title>
+		<title>歡迎加入 <span th:text="${storeInfo.storeName}">[storeName]</span></title>
 		<style>
 			html,body { padding: 0; margin:0; }
 			a:hover { color: #009ef7; }
@@ -24,13 +24,13 @@
 								<div style="text-align:center; margin:0 16px 24px 16px">
 									<!--begin:Text-->
 									<div style="font-size: 14px; font-weight: 500; margin-bottom: 27px; font-family:Arial,Helvetica,sans-serif;">
-										<p style="margin-bottom:9px; color:#181C32; font-size: 22px; font-weight:700">歡迎加入 <span th:text="${storeInfo.teamName}">[storeName]</span>！🎉</p>
+										<p style="margin-bottom:9px; color:#181C32; font-size: 22px; font-weight:700">歡迎加入 <span th:text="${storeInfo.storeName}">[storeName]</span>！🎉</p>
 										<p style="margin-bottom:2px; color:#7E8299">感謝您選擇我們！我們很高興您成為我們的會員。</p>
-										<p style="margin-bottom:2px; color:#7E8299">您的註冊帳號[ <span th:text="${data.email}"> </span> ]已經成功啟用，現在您可以開始使用我們的服務，盡情探索各種優質商品，享受便利的購物體驗！</p>
+										<p style="margin-bottom:2px; color:#7E8299">您的註冊帳號[ <span th:text="${storeInfo.email}"> </span> ]已經成功啟用，現在您可以開始使用我們的服務，盡情探索各種優質商品，享受便利的購物體驗！</p>
 									</div>
 									<!--end:Text-->
 									<!--begin:Action-->
-									<a th:href="${data.login}" target="_blank" style="background-color:#50cd89; border-radius:6px;display:inline-block; padding:11px 19px; color: #FFFFFF; font-size: 14px; font-weight:500;">開始購物</a>
+									<a th:href="${storeInfo.browseStores}" target="_blank" style="background-color:#50cd89; border-radius:6px;display:inline-block; padding:11px 19px; color: #FFFFFF; font-size: 14px; font-weight:500;">開始購物</a>
 									<!--end:Action-->
 								</div>
 								<!--end:Email content-->
@@ -63,7 +63,7 @@
 					</tr>
 					<tr>
 						<td align="center" valign="center" style="color:#181C32; font-size: 14px; font-weight: 600;font-family:Arial,Helvetica,sans-serif; padding: 20px 10px;">
-							<p>再次感謝您加入 <span th:text="${storeInfo.teamName}">[storeName]</span>，讓我們一起探索更便利、更精彩的購物新體驗！</p>
+							<p>再次感謝您加入 <span th:text="${storeInfo.storeName}">[storeName]</span>，讓我們一起探索更便利、更精彩的購物新體驗！</p>
 						</td>
 					</tr>
 					<tr>
