--- a/mall_seller/account/email-changed.html
+++ b/mall_seller/account/email-changed.html
@@ -37,14 +37,9 @@
 							</div>
 							<div style="padding-bottom: 30px; color: #2F3044;">我們收到您修改好嗨商 HiShops 登入帳號的申請，請點擊下面的按鈕完成變更生效：<br>(此確認連結將在 24 小時後失效)</div>
 							<div style="padding-bottom: 40px; text-align:left;">
-								<a th:href="${verificationUrl}" rel="noopener" target="_blank" style="background-color:#009ef7; color:#ffffff; font-size: 14px; font-weight: 600; border-radius: 6px; padding: 11px 19px; display: inline-block; text-decoration: none;">確認變更</a>
+								<a th:href="${emailChangeInfo.verificationUrl}" rel="noopener" target="_blank" style="background-color:#009ef7; color:#ffffff; font-size: 14px; font-weight: 600; border-radius: 6px; padding: 11px 19px; display: inline-block; text-decoration: none;">確認變更</a>
 							</div>
 							<div style="padding-bottom: 30px; color: #2F3044;">若您最近沒有提出修改帳號的申請，且認為可能有人存取了您的帳號，請盡快聯繫我們。您的數位安全對我們來說非常重要！</div>
-							<!-- <div style="border-top: 1px solid #e9ecef; margin: 15px 0"></div>
-							<div style="padding-bottom: 50px; word-break: break-all; overflow-wrap: break-word; color: #2F3044;">
-								<p style="margin-bottom: 10px;">按鈕無法使用？請嘗試將以下網址複製到您的瀏覽器中：</p>
-								<a th:href="${verificationUrl}" rel="noopener" target="_blank" style="text-decoration:none; color: #009ef7; font-size: 14px; font-weight: 600;">確認變更的URL連結</a>
-							</div> -->
 							<!-- 聯絡資訊區塊 -->
 							<div style="padding-top: 30px; margin-top: 30px;">
 								<p style="color:#181C32; font-size: 15px; font-weight: 600; margin-bottom:10px; text-align:left;">
@@ -83,7 +78,7 @@
 				</tr>
 				<tr>
 					<td align="center" valign="center" style="font-size: 13px; text-align:center; padding: 20px; color: #6d6e7c;">
-						<p>好嗨商 | HiShops &copy; <span th:text="${#temporals.year(#temporals.now())}"></span> 是由 <a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank" style="color: #6d6e7c; text-decoration: none;">奇威雲端科技</a> 為您精心打造的電商平台。</p>
+						<p>好嗨商 | HiShops &copy; <span th:text="${emailChangeInfo.currentYear}"></span> 是由 <a href="https://www.keywaycloud.com.tw" rel="noopener" target="_blank" style="color: #6d6e7c; text-decoration: none;">奇威雲端科技</a> 為您精心打造的電商平台。</p>
 					</td>
 				</tr>
 			</tbody>
